Few fixes
